--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "nodemon": "^1.17.4"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "twitter": "^1.7.1"
   }
 }
