--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-  "presets": ['env', 'react'],
-  "plugins": ["transform-class-properties"],
-  "env": {
-    "test": {
-      "presets": [["env"], "react"]
-    }
-  }
+  "presets": ['env', 'react', 'es2015'],
+  "plugins": ["transform-class-properties"]
 }
