--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon ./server/index.js",
     "start": "webpack && node ./server/index.js"
@@ -20,10 +21,15 @@
   "homepage": "https://github.com/calebchoi/twitter-content-lab#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^22.4.3",
     "nodemon": "^1.17.4"
   },
   "dependencies": {
