--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon ./server/index.js",
-    "start": "webpack && node ./server/index.js"
+    "start": "webpack && node ./server/index.js",
+    "postinstall": "webpack -p"
   },
   "repository": {
     "type": "git",
