--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "webpack": "^4.8.3"
   }
 }
