--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.4.3",
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.4",
+    "webpack-cli": "^2.1.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
